change splash screen

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "budget-logger",
+	"appId": "io.ionic.hu.budget.logger.szte",
+	"appName": "Budget Logger",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
